--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- <hr> -->
         <div class="main-text">
             <img src="pic.png" alt="pic">
-            <h1>In the loving memory of Sheikh Fareed (رَحِمَهُ ٱللَّٰهُ)</h1>
+            <h1>In the loving memory of Sheikh Fareed <br> (رَحِمَهُ ٱللَّٰهُ)</h1>
             <p>- A voice of faith . A heart of wisdom . A legacy that  lives on -</p>
            <a href="recitations.html"> <button>Listen to recitations</button></a>
         </div>
