--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="main-text">
             <img src="pic.png" alt="pic">
             <h1>In the loving memory of Sheikh Fareed <br> (رَحِمَهُ ٱللَّٰهُ)</h1>
-            <p>- A voice of faith . A heart of wisdom . A legacy that  lives on -</p>
+            <p>A voice of faith<br>A heart of wisdom<br>A legacy that  lives on</p>
            <a href="recitations.html"> <button>Listen to recitations</button></a>
         </div>
     </section>
@@ -49,12 +49,12 @@
                 <br>
                 This website stands as a tribute to his legacy - a place where
                 his voice continues to echo, and his knowledge remains a source of guidance for generations to come.
-                It is a humble effort to preserve his light and teachings so they may to continue to
-                benefit others, even after his return to allah. May everyone who benefits from his recitations or teachings
+                It is a humble effort to preserve his light and teachings so they may continue to
+                benefit others, even after his return to Allah. May everyone who benefits from his recitations or teachings
                 be a means of continuous reward for him in the hereafter.
                 <br> 
                 <br>
-                May allah have mercy on him, forgive his shortcomings and grant him the highest levels of jannah, al-Firdaws. 
+                May Allah have mercy on him, forgive his shortcomings and grant him the highest levels of jannah, al-Firdaws. 
                 May his legacy continue to be a source of guidance and reward. Aameen.
                 <!-- <div class="socials">
                     <a href=""><i class="fab fa-facebook-f"></i></a>
