--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
         <div class="main-text">
             <img src="pic.png" alt="pic">
             <h1>In the loving memory of Sheikh Fareed <br> (رَحِمَهُ ٱللَّٰهُ)</h1>
-            <p>A voice of faith<br>A heart of wisdom<br>A legacy that  lives on</p>
+            <p>
+                A voice of faith
+               <span class="mobile"><br></span>
+                A heart of wisdom
+                <br>
+                A legacy that  lives on
+            </p>
            <a href="recitations.html"> <button>Listen to recitations</button></a>
         </div>
     </section>
