--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 A voice of faith
                <span class="mobile"><br></span>
                 A heart of wisdom
-                <br>
+               <span class="mobile"><br></span>
                 A legacy that  lives on
             </p>
            <a href="recitations.html"> <button>Listen to recitations</button></a>
